Nuevo cambio de logo

--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
 								<span class="icon-bar"></span>
 							</button>
 							<a class="navbar-brand" href="#">
-								<img src="assets/images/logo/logo1.png" alt="logo">
+								
+								<img  src="assets/images/logo/logo_menu.png" style="width: 250px;">
 							</a>
 						</div><!--/.navbar-header -->
 
@@ -719,11 +720,11 @@
 		<!--news end-->
 
 		<!--contact start-->
-		<section id="contact"  class="contact">
+		<section id="contact"  class="contact" >
 			<div class="container">
 				<div class="contact-details">
 					<div class="section-header contact-head  text-center">
-						<h2 style="font-size: 32px; ">Contáctanos</h2> <!--<p>
+						<h2 style="font-size: 32px;color: #186363; ">Contáctanos</h2> <!--<p>
 							Pallamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
 						</p>-->
 					</div><!--/.section-header-->
@@ -734,8 +735,8 @@
 									<div class="contact-right">
 										<div class="contact-adress">
 											<div class="contact-office-address" >
-												<h3>Dirección</h3>
-												<p>
+												<h3 style="color: #186363; ">Dirección</h3>
+												<p style="color: #186363; ">
 													Av. Chacaito. Edif. San Nicolas, Piso 1, Nº 5 - Chacaito Z.P 1056.
 												</p>
 												
@@ -749,17 +750,17 @@
 							<div class="col-sm-5">
 								<div class="single-contact-box">
 									<div class="contact-form">
-										<h3 style="font-size: 26px; ">Agenda tu servicio</h3>
+										<h3 style="font-size: 26px;color: #186363;  ">Agenda tu servicio</h3>
 										<div class="contact-online-address">
-													<div class="single-online-address">
+													<div class="single-online-address" style="color: #186363; ">
 														<i class="fa fa-phone"></i>
 														0212-9515329 / 0416-4230742 
 													</div><!--/.single-online-address-->
-													<div class="single-online-address">
+													<div class="single-online-address" style="color: #186363; ">
 														<i class="fa fa-phone"></i>
 														0416-4063449 / 0414-9310785
 													</div><!--/.single-online-address-->
-													<div class="single-online-address">
+													<div class="single-online-address" style="color: #186363; ">
 														<i class="fa fa-phone"></i>
 														04241411718 
 													</div><!--/.single-online-address-->
@@ -819,7 +820,7 @@
 								<div class="hm-foot-title">
 									<div class="logo">
 										<a href="#">
-											<img  src="assets/images/logo/logo2.png" alt="logo" />
+											<img  src="assets/images/logo/logo_footer.png" />
 										</a>
 									</div><!-- /.logo-->
 								</div><!--/.hm-foot-title-->
